--- a/src/pages/loading/loading.module.css
+++ b/src/pages/loading/loading.module.css
@@ -1,5 +1,5 @@
 .background {
-  background: #333;
+  background: #F5F5F5;
   display: flex;
   justify-content: center;
   height: 100vh;
@@ -19,7 +19,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 2px solid #fff;
+    border: 2px solid #333;
 
     width: 10px;
     height: 10px;
@@ -40,7 +40,7 @@
   }
 
   .move_blob {
-    background: #fff;
+    background: #333;
     top: 0;
 
     animation: blob-spinner-mover 1s infinite ease-in;
